--- a/Launcher/App/src/main/res/layout/lv_app_icon.xml
+++ b/Launcher/App/src/main/res/layout/lv_app_icon.xml
@@ -58,6 +58,7 @@
         android:layout_height="35sp"
         android:layout_marginTop="-1sp"
         android:layout_marginBottom="-1dp"
+        android:ellipsize="end"
         android:gravity="center"
         android:lineSpacingExtra="-1dp"
         android:maxLines="2"
